03-built-in-resouce-types/Ingress/Deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
   name: nginx-minimal
spec:
  replicas: 2
  selector:
    matchLabels:
       app: nginx-pod-level
  template:
    metadata:
      labels:
       app: nginx-pod-level
    spec:
       containers:
         - name: nginx
           image: nginx:1.26.0
