03-built-in-resouce-types/Ingress/Service.nginx-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-clusterip
spec:
  type: ClusterIP
  selector:
    app: nginx-pod-level
  ports:
  - port: 80
    targetPort: 8080
