03-built-in-resouce-types/Ingress/Service.nginx-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
spec:
  type: NodePort
  selector:
    app: nginx-pod-level
  ports:
  - port: 80
    targetPort: 8080
